fixed some findbugs suggestions.